--- a/regressor.ipynb
+++ b/regressor.ipynb
@@ -390,7 +390,7 @@
     "    IQR = Q3 - Q1\n",
     "    lower_bound = Q1 - 1.5 * IQR\n",
     "    upper_bound = Q3 + 1.5 * IQR\n",
-    "    df[column] = df[column].clip(lower=lower_bound, upper=upper_bound)\n"
+    "    df[column] = df[column].clip(lower=lower_bound, upper=upper_bound)"
    ]
   },
   {
@@ -826,7 +826,7 @@
     "y = df['SalePrice']\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -937,8 +937,7 @@
       "Median_AE : 13712.745169494912\n",
       "R-squared (R2) is 0.9025339100204982\n",
       "------------------------------------------------\n",
-      "Model Accuracy: 0.9025339100204982\n",
-      "Model Accuracy: 0.8787586419729615\n"
+      "Model Accuracy: 90.25339100204982\n"
      ]
     }
    ],
@@ -950,9 +949,7 @@
     "print(\"R-squared (R2) is\",r2_score(y_test,y_pred))\n",
     "print('------------------------------------------------')\n",
     "accuracy = model.score(X_test_scaled, y_test)\n",
-    "accuracy2 = model.score(X_train_scaled,y_train)\n",
-    "print(f'Model Accuracy: {accuracy}')\n",
-    "print(f'Model Accuracy: {accuracy2}')"
+    "print(f'Model Accuracy: {accuracy*100}')\n"
    ]
   },
   {
@@ -999,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "4861f0d4-13b1-47b3-bc9e-33717a4bc9fc",
    "metadata": {},
    "outputs": [
@@ -1050,36 +1047,6 @@
     "plt.ylabel('Mean Squared Error Loss')\n",
     "plt.legend()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d17343df-0fab-4087-a680-4e3fddb6e194",
-   "metadata": {},
-   "source": [
-    "# Cross Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "5501f799-2e10-4204-a210-86fd1754fe1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validated accuracy scores: [0.89456097 0.87751271 0.88034506 0.87933701 0.83283971]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Obtain cross-validated accuracy scores\n",
-    "accuracy_scores = cross_val_score(model, X, y, cv=5, scoring='r2')\n",
-    "\n",
-    "# Print the cross-validated accuracy scores\n",
-    "print(\"Cross-validated accuracy scores:\", accuracy_scores)"
    ]
   }
  ],
